--- a/backend/inventory-api/Dockerfile
+++ b/backend/inventory-api/Dockerfile
@@ -1,8 +1,13 @@
+FROM maven:3.9.6-eclipse-temurin-21 AS build
+
+WORKDIR /app
+COPY . .
+RUN mvn package -DskipTests
+
 FROM eclipse-temurin:21-jre
 
 WORKDIR /app
-
-COPY target/quarkus-app /app/
+COPY --from=build /app/target/quarkus-app /app/
 
 EXPOSE 8080
 
