--- a/backend/inventory-api/Dockerfile
+++ b/backend/inventory-api/Dockerfile
@@ -1,13 +1,17 @@
 FROM maven:3.9.6-eclipse-temurin-21 AS build
 
-WORKDIR /app
-COPY . .
+WORKDIR /build
+
+COPY pom.xml .
+COPY src ./src
+
 RUN mvn package -DskipTests
 
 FROM eclipse-temurin:21-jre
 
 WORKDIR /app
-COPY --from=build /app/target/quarkus-app /app/
+
+COPY --from=build /build/target/quarkus-app /app/
 
 EXPOSE 8080
 
