--- a/backend/inventory-api/Dockerfile
+++ b/backend/inventory-api/Dockerfile
@@ -2,8 +2,7 @@ FROM maven:3.9.6-eclipse-temurin-21 AS build
 
 WORKDIR /build
 
-COPY pom.xml .
-COPY src ./src
+COPY . .
 
 RUN mvn package -DskipTests
 
@@ -14,5 +13,7 @@ WORKDIR /app
 COPY --from=build /build/target/quarkus-app /app/
 
 EXPOSE 8080
+
+ENV QUARKUS_HTTP_PORT=8080
 
 CMD ["java", "-jar", "quarkus-run.jar"]
