--- a/backend/inventory-api/src/main/resources/application.properties
+++ b/backend/inventory-api/src/main/resources/application.properties
@@ -9,3 +9,5 @@ quarkus.http.cors.origins=http://localhost:3000,http://localhost:5173
 quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 quarkus.http.cors.headers=*
 quarkus.http.port=${PORT:8080}
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
