--- a/backend/inventory-api/src/main/resources/application.properties
+++ b/backend/inventory-api/src/main/resources/application.properties
@@ -7,7 +7,8 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.http.cors.enabled=true
 quarkus.http.cors.origins=http://localhost:3000,http://localhost:5173
 quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
-quarkus.http.cors.headers=*
 quarkus.http.port=${PORT:8080}
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.proxy.proxy-address-forwarding=true
